--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
                         📸 Credits to The Image Publication for capturing this moment!
                     </p>
                 </div>
+                 <div class="view-button">
+                <a href="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fweb.facebook.com%2FOMSCTheImage%2Fposts%2Fpfbid0tW3CJJBAd5tZsJSixnHN19qxyZML2TGUcde88A2rMWz3PGCiaLL5t4mdwqGdAXqrl&show_text=true&width=500" target="_blank" class="btn view-btn">View</a>
+                </div>
             </div>
     
             <!-- Second Post -->
