--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
                  <div class="hero-text">
                     <h5>Hi I'm <span class="input">Frontend Developer</span></h5>
                     <h1>Louigie Felix</h1>
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta delectus dolorum 
-                        quibusdam maiores magni quod rem in porro, laborum, laudantium ex repellendus explicabo, 
-                        autem molestiae!
+                    <p>With a passion for creating innovative Windows applications and advanced knowledge in AI, I am dedicated to combining technology and creativity to build impactful solutions.
                     </p>
 
                     <div class="btn-group">
