--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         });
 
         var typed = new Typed(".input", {
-            strings: ["Frontend Developer", "UX Designer", "Web Developer"],
+            strings: ["Windows app Developer", "UI Designer", "Video Editor"],
             typedSpeed: 70,
             backSpeed: 55,
             loop: true
