--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </p>
 
                     <div class="btn-group">
-                       <a href="#" class="btn active">Download CV</a>
+                       <a href="https://drive.google.com/file/d/1xCpPJmsV3MotvM97Yyw0g4eYUtEuckR1/view?usp=drive_link" class="btn active">Download CV</a>
                        <a href="#contact" class="btn">Contact</a>
                     </div>
 
