--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <img src="profile.png" alt="profile pic">
                  </div>
                  <div class="hero-text">
-                    <h5>Hi I'm <span class="input">Frontend Developer</span></h5>
+                    <h5>Hi I'm <span class="input">C# Developer</span></h5>
                     <h1>Louigie Felix</h1>
                     <p>With a passion for creating innovative Windows applications and advanced knowledge in AI, I am dedicated to combining technology and creativity to build impactful solutions.
                     </p>
