--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
     </div>
     <div class="hidden-text bottom" id="hiddenTextBottom">
         <div>
-            <span>V</span><span>A</span><span>N</span><span>N</span><span>E</span><span>S</span><span>A</span> 
-            <span>E</span><span>L</span><span>E</span><span>I</span><span>N</span><span>A</span> 
-            <span>C</span><span>A</span><span>J</span><span>A</span><span>Y</span><span>O</span><span>N</span>
+            <span>Ve</span><span>eA</span><span>Ne</span><span>Ne</span><span>Ee</span><span>S</span><span>A</span> 
+            <span>Ee</span><span>eL</span><span>Ee</span><span>Ie</span><span>Ne</span><span>Ae</span> 
+            <span>C</span><span>A</span><span>Je</span><span>Ae</span><span>Ye</span><span>Oe</span><span>N</span>
         </div>
     </div>
     
